--- a/style.css
+++ b/style.css
@@ -59,6 +59,22 @@ section{
   margin-left: 5px;
   margin-top: 15px;
 }
+.row #wh{
+  width: 100%;
+  color: #fff;
+  border: none;
+  outline: none;
+  padding: 4px 0;
+  font-size: 0.9rem;
+  margin-top: 24px;
+  margin-bottom: 13px;
+  margin-left: 15px;
+  background: none;
+  border-radius: 4px;
+  cursor: pointer;
+  background: #FF4D4D;
+  border: 1px solid #FF4D4D;
+}
 .row .options .option{
   display: flex;
   cursor: pointer;
