--- a/style.css
+++ b/style.css
@@ -27,6 +27,35 @@ section{
   display: flex;
   flex-direction: row;
 }
+#stagewhat .title{
+  margin-bottom: 5px;
+}
+#numberroom .title{
+  margin-bottom: 5px;
+}
+
+#room-list {
+  /* Настройки внешнего вида списка */
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  color: #000000 ;
+  background-color: #ffffff;
+  width: 40px;
+}
+
+#room-list option {
+  /* Настройки внешнего вида отдельных элементов списка */
+  padding: 5px;
+  margin: 2px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+
+#room-list option:hover {
+  /* Настройки внешнего вида элемента при наведении */
+  background-color: #FF4D4D;
+}
+
 .row{
   display: flex;
   flex-direction: column;
@@ -38,10 +67,17 @@ section{
 #what{
   margin-top: 15px;
 }
+#numberroom label{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .row .options{
   list-style: none;
   margin: 10px;
+  margin-right: 35px;
 }
+
 .row #size{
   display: flex;
   flex-direction: row;
@@ -60,13 +96,24 @@ section{
   margin-left: 5px;
   margin-top: 15px;
 }
+#num{
+  width: 40px;
+  margin-left: 5px;
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+#btnnum
+{
+  margin-left: -1px;
+
+}
 .row #size div input{
   width: 40px;
   margin-left: 5px;
   margin-top: 15px;
 }
 .row button{
-  width: 80px;
+  width: 90px;
   color: #fff;
   border: none;
   outline: none;
@@ -134,6 +181,7 @@ section{
 }
 .row.colors .options {
   margin-right: 40px;
+  margin-left: -5px;
 }
 .colors .option:nth-child(1){
   background-color: #fff;
