--- a/style.css
+++ b/style.css
@@ -124,6 +124,30 @@ section {
 	margin-top: 15px;
 }
 
+#rowinput {
+	margin-left: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+#rowinput label{
+	align-items: center;
+	justify-content: center;
+	margin-left: 15px;
+}
+#copyInput
+{
+	align-items: center;
+	justify-content: center;
+	width: 90px;
+	margin-left: 15px;
+	margin-top: 30px;
+}
+#copyButton
+{
+	margin-top: 30px;
+}
+
 .row button {
 	width: 90px;
 	color: #fff;
